--- a/src/components/result_div/ResultDivStyle.css
+++ b/src/components/result_div/ResultDivStyle.css
@@ -5,5 +5,6 @@
   border: 1px solid rgb(118, 118, 118);
   border-radius: 5px;
   box-sizing: border-box;
+  font-size: 13.3px;
   font-family: ChosunGu;
 }
